--- a/materifungsi.html
+++ b/materifungsi.html
@@ -50,6 +50,7 @@
 
   <div id="fungsi" class="bg-1">
     <div class="container">
+      <div class="ujian mt-2 mb-2 pt-2 pb-2"></div>
         <div class="row">
       <div class="col-12 col-md-4 col-xl-3">
         <ul class="m-2 px-4 py-3 sticky-top border rounded" style="top: 5rem;">
@@ -60,45 +61,31 @@
         </ul>
       </div>
       <div class="col-12 col-md-8 col-xl-9 order-md-first">
-        <h1 id="definisi-fungsi">
+        <h3 id="definisi-fungsi">
           Apa itu fungsi?
-        </h1>
+        </h3>
         <p>
-          Dalam matematika, konsep relasi merujuk pada hubungan atau keterkaitan antara dua himpunan elemen, sementara
-          fungsi merupakan kasus khusus relasi yang menetapkan satu elemen dari himpunan asal ke satu elemen dari
-          himpunan
-          tujuan.
+          <strong>Fungsi</strong> adalah relasi khusus yang menghubungkan setiap anggota daerah asal dengan tepat satu anggota daerah kawan.
         </p>
 
-        <h1 id="pentingnya-fungsi">
+        <h3 id="pentingnya-fungsi">
           Kenapa fungsi penting?
-        </h1>
+        </h3>
         <p>
           Fungsi sangat penting karena relasi memberikan pemahaman tentang koneksi dan keterkaitan antara elemen dalam
           himpunan. Sementara fungsi, memberikan struktur yang terorganisir untuk memodelkan dan menganalisis hubungan
           matematis.
         </p>
 
-        <h1 id="ciri-fungsi">
+        <h3 id="ciri-fungsi">
           Bagaimana ciri-ciri dari suatu fungsi?
-        </h1>
+        </h3>
         <p>
-          <strong>Fungsi</strong> merupakan salah satu konsep penting dalam matematika. Dengan mengenali fungsi atau
-          hubungan fungsional antar unsur-unsur matematika, kita bisa lebih mudah memahami suatu permasalahan, dan
-          menyelesaikannya. Oleh karena itu, memahami fungsi merupakan hal yang sangat diharapkan dalam belajar
-          matematika.
-        </p>
-        <p>
-          Pertama kali, mari kita pelajari <strong>ciri-ciri</strong> dari suatu fungsi, sebelumnya mari kita ketahui
-          apa
-          saja ciri-ciri
-          fungsi: <br>
-        <ul>
-          <li> Himpunan A dan himpunan B <strong>bukan himpunan kosong.</strong></li>
-          <li>Pasangan setiap anggota himpunan A <strong>tidak boleh lebih dari satu</strong>.</li>
-          <li>Setiap anggota himpunan A harus mempunyai pasangan di himpunan B.</li>
-          <li>Anggota himpunan B boleh tidak mempunyai pasangan di A atau mempunyai pasangan lebih dari satu.</li>
-        </ul>
+          Mari kita ketahui apa saja <strong>ciri-ciri fungsi</strong>:<br>
+          • Himpunan A dan himpunan B <strong>bukan himpunan kosong</strong>.<br>
+          • Pasangan setiap anggota himpunan A <strong>tidak boleh lebih dari satu</strong>.<br>
+          • Setiap anggota himpunan A <strong>harus mempunyai pasangan</strong> di himpunan B.<br>
+          • Anggota <strong>himpunan B</strong> boleh tidak mempunyai pasangan di A atau mempunyai <strong>pasangan lebih dari satu</strong>.
         </p>
         <p>
           Perlu kalian ketahui, dalam konteks fungsi dari himpunan A ke himpunan B, maka <strong>himpunan A disebut
@@ -107,7 +94,6 @@
           bagian dari himpunan B yang semua <strong>anggotanya mendapat pasangan</strong> di anggota <strong>himpunan A
             disebut range (daerah hasil).</strong>
         </p>
-
         <p>
           <strong>Perhatikan contoh di bawah ini!</strong><br>
         </p>
@@ -128,89 +114,87 @@
         <p>
           Coba kita perhatikan kembali beberapa anggota A lainnya yang tidak mempunyai pasangan ke B, yakni:<br>
           Beberapa anggota A yang <strong>tidak mempunyai pasangan </strong> di B adalah 4, 6, 8, 12, 14, dan 16.<br>
-          Hal ini karena tidak ada bilangan x di B demikian sehingga “4 dua kali anggota B”, “6 dua kali anggota B”, “8
+          Hal ini karena tidak ada bilangan x di B demikian sehingga <strong>“4 dua kali anggota B”</strong>, <strong>“6 dua kali anggota B”</strong>, <strong>“8
           dua
-          kali anggota B”, “12 dua kali anggota B”, “14 dua kali anggota B”, dan “16 dua kali anggota B”.
+          kali anggota B”</strong>, <strong>“12 dua kali anggota B”</strong>, <strong>“14 dua kali anggota B”</strong>, dan <strong>“16 dua kali anggota B”</strong>.
         </p>
 
-        <h1 id="menyatakan-fungsi">
+        <h3 id="menyatakan-fungsi">
           Bagaimana menyatakan suatu fungsi?
-        </h1>
+        </h3>
         <p>
-          Misalkan fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. <br>
-          Relasi yang didefinisikan adalah <strong>"setengah kali dari"</strong>. Permasalahan ini dapat dinyatakan
-          dengan
-          <strong>5 cara</strong>, yaitu sebagai berikut:
+          Sejauh berapa kilometer yang dibutuhkan untuk uang sebesar Rp154.500,00. Jika ketentuan tarif yang diberlakukan oleh perusahaan taksi:<br>
+          1. Biaya tarif awal sebesar Rp7.500,00 dan tarif per kilometer sebesar Rp3.000,00.<br>
+          2. Berapa besar tarif yang dibutuhkan untuk perjalanan sejauh 20 km, 25 km, 30 km?<br>
+          3. Dapatkah kalian menetapkan tarif untuk perjalanan sejauh 36 km?<br>
+          Sehingga <strong>hitungan aritmetika</strong>:<br>
+          Untuk biaya 20 km = Rp7.500,00 + 20 × Rp3.000,00 = Rp67.500,00<br>
+          Untuk biaya 25 km = Rp7.500,00 + 25 × Rp3.000,00 = Rp82.500,00<br>
+          Untuk biaya 30 km = Rp7.500,00 + 30 × Rp3.000,00 = Rp97.500,00<br>
         </p>
         <p>
-          <strong>Cara 1: Himpunan pasangan berurutan</strong> <br>
-          Diketahui fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. <br>
-          Relasi yang didefinisikan adalah <strong>"setengah kali dari"</strong>. <br>
-          Relasi ini dapat dinyatakan dengan <strong>himpunan pasangan berurut</strong> dengan f = {(1, 2), (2, 4), (3,
-          6),
-          (4, 8), (5, 10)}
+          Bagaimanakah cara kalian <strong>menentukan rumus fungsinya</strong>?<br>
+          Misalkan suatu fungsi f diterapkan dari himpunan P = {1, 2, 3, 4, 5} ke himpunan Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. "setengah kali dari" merupakan relasi yang ditentukan.
         </p>
         <p>
-          <strong>Cara 2: Diagram panah</strong> <br>
-          Diketahui fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. Relasi yang didefinisikan
-          adalah <strong>"setengah kali dari"</strong>. Relasi ini dapat dinyatakan dengan <strong>diagram panah,
-          </strong>
-          sebagai berikut.
+          <strong>Cara 1: Diagram Panah</strong><br>
+          Apabila <strong>"setengah kali dari"</strong> adalah relasi yang ditentukan, maka diagram berikut ini merupakan cara yang dapat digunakan untuk hubungan tersebut.<br>
+        <strong>GAMBARRR!!!</strong>
+        </p>
+        <P>
+          <strong>Cara 2: Himpunan Pasangan Berurutan</strong><br>
+          Apabila "setengah kali dari" adalah relasi yang ditentukan, maka himpunan pasangan berikut ini merupakan cara yang dapat digunakan untuk hubungan tersebut.<br>
+          𝑓 = {(1,2), (2,4), (3,6), (4,8), (5,10)}
+        </P>
+        <p>
+          <strong>Cara 3: Persamaan Fungsi</strong><br>
+          Perhatikan pola berikut untuk direpresentasikan menggunakan rumus fungsi. Himpunan pasangan berurutan dari {(1, 2),(2, 4),(3, 6),(4, 8),(5, 10)} dapat membentuk menjadi pola matematika sebagai berikut.<br>
+          (1, 2) menjadi (1,2 × 1)<br>
+          (2, 4) menjadi (2,2 × 2)<br>
+          (3, 6) menjadi (3,2 × 3)<br>
+          (4, 8) menjadi (4,2 × 4)<br>
+          (5, 10) menjaid (5,2 × 5)
         </p>
         <p>
-          <strong>Cara 3: Dengan persamaan fungsi</strong>
-          Diketahui fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. <br>
-          Relasi yang didefinisikan adalah <strong>"setengah kali dari"</strong>. <br>
-          Relasi ini dapat dinyatakan dengan <strong>rumus fungsi</strong>, yaitu berikut: <br>
-          Untuk menyatakan dengan rumus fungsi, coba perhatikan pola berikut ini. <br>
-          Dari himpunan pasangan berurutan {(1, 2), (2, 4), (3, 6), (4, 8), (5, 10)} didapat: <br>
-          (1, 2) ---> (1, 2 x 1) <br>
-          (2, 4) ---> (2, 2 x 2) <br>
-          (3, 6) ---> (3, 2 x 3) <br>
-          (4, 8) ---> (4, 2 x 4) <br>
-          (5, 10) ---> (5, 2 x 5) <br>
-          Kalau anggota P kita sebut x dan anggota Q kita sebut y, maka x = y <br>
-          Dari x = y kita dapatkan y = 2x <br>
-          Bentuk ini biasa ditulis dengan f(x) = 2x, untuk setiap x P <br>
-          Inilah yang dinyatakan sebagai <strong>persamaan fungsi</strong>.
+          <strong>Cara 4: Tabel</strong><br>
+          Apabila "setengah kali dari" adalah relasi yang ditentukan, maka tabel berikut ini merupakan cara yang dapat digunakan untuk hubungan tersebut.<br>
+          <strong>TABELLL!!!</strong>
         </p>
         <p>
-          <strong>Cara 4: Dengan tabel</strong> <br>
-          Diketahui fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. <br>
-          Relasi yang didefinisikan adalah <strong>"setengah kali dari"</strong>. <br>
-          Relasi ini dapat dinyatakan dengan tabel, sebagai berikut.
+          <strong>Cara 5: Grafik</strong><br>
+          Apabila "setengah kali dari" adalah relasi yang ditentukan, maka graik berikut ini merupakan cara yang dapat digunakan untuk hubungan tersebut.<br>
+          <strong>GRAFIKKK</strong>
         </p>
-        <p>
-          <strong>Cara 5: Dengan grafik</strong> <br>
-          Diketahui fungsi f dari P = {1, 2, 3, 4, 5} ke Q = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}. <br>
-          Relasi yang didefinisikan adalah<strong>"setengah kali dari"</strong>. <br>
-          Relasi ini dapat dinyatakan dengan tabel, sebagai berikut.
-        </p>
-        <p>
-          Uraian di atas menunjukkan macam-macam cara yang bisa digunakan untuk menyatakan <strong>fungsi dari himpunan
-            P
-            ke
-            himpunan Q.</strong>
-        </p>
+        <P>
+          Berdasarkan pembahasan sebelumnya, terdapat lima cara untuk menyatakan suatu fungsi dari himpunan P ke Q. Selanjutnya, kembali ke permasalahan awal penentuan rumus fungsi untuk masalah tarif taksi.<br>
+          Beberapa harga sewa taksi telah disampaikan sebelumnya, selanjutnya akan ditunjukkan lebih rinci seperti uraian berikut ini.<br>
+          Besar biaya untuk 20 km = Rp7.500,00 + 20 × Rp3.000,00 = Rp67.500,00<br>
+          Besar biaya untuk 25 km = Rp7.500,00 + 25 × Rp3.000,00 = Rp82.500,00<br>
+          Besar biaya untuk 30 km = Rp7.500,00 + 30 × Rp3.000,00 = Rp97.500,00<br>
+          Cobalah perhatikan dengan cermat terhadap angka yang muncul di setiap persamaan berikut:<br>
+          Besar biaya untuk 20 km = Rp7.500,00 + 20 × Rp3.000,00<br>
+          Besar biaya untuk 25 km = Rp7.500,00 + 25 × Rp3.000,00<br>
+          Besar biaya untuk 30 km = Rp7.500,00 + 30 × Rp3.000,00<br>
+          Perhatikan angka 20 di sebelah kiri dan angka 20 di sebelah kanan. Apa persamaan dan perbedaannya?<br>
+          Perhatikan angka 7500 di sebelah kanan!<br>
+          Jika 𝐵(𝑥) adalah tarif naik taksi untuk 𝑥 kilometer, maka 𝐵(𝑥) dapat dinyatakan sebagai persamaan 𝐵(𝑥) = 3000𝑥 + 7500.
+        </P>
       </div>
     </div>
 
-    <fieldset id="question" class="border rounded p-4 pt-0 my-4 mx-2" x-data="{ answer: null, showAnswer: false }">
+    <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="{ answer: null, showAnswer: false }">
       <legend class="float-none w-auto fs-6 text-body-secondary">Quiz!</legend>
       <p>
-        Sebuah tempat wisata memasang tarif masuk Rp10.000 setiap orang dan ditambah tarif parkir Rp5.000 untuk
-        setiap
-        kendaraan roda empat. Jika Chris datang ke tempat wisata tersebut bersama 3 rekannya menggunakan mobil,
-        biaya
-        yang
-        harus ia bayar adalah...
+        Daerah asal fungsi f dari x ke 2x - 1 adalah {𝑥| − 1 ≤ 𝑥 < 2, 𝑥 ∈ 𝑅} . Tentukanlah daerah hasilnya!
       </p>
       <input type="radio" x-model="answer" id="answer-a" value="a">
-      <label for="answer-a">Rp 35.000</label><br>
+      <label for="answer-a">{𝑓(𝑥)| − 1 ≤ 𝑓(𝑥) < 1}</label><br>
       <input type="radio" x-model="answer" id="answer-b" value="b">
-      <label for="answer-b">Rp 40.000</label><br>
+      <label for="answer-b">{𝑓(𝑥)| − 2 ≤ 𝑓(𝑥) < 2}</label><br>
       <input type="radio" x-model="answer" id="answer-c" value="c">
-      <label for="answer-c">Rp 45.000</label><br>
+      <label for="answer-c">{𝑓(𝑥)| − 3 ≤ 𝑓(𝑥) < 3}</label><br>
+      <input type="radio" x-model="answer" id="answer-b" value="b">
+      <label for="answer-b">{𝑓(𝑥)| − 4 ≤ 𝑓(𝑥) < 4}</label>
 
       <template x-if="!showAnswer">
         <button class="btn btn-primary mt-4" @click="showAnswer = true">Submit</button>
