--- a/materirelasi.html
+++ b/materirelasi.html
@@ -56,35 +56,71 @@
 
   <div id="relasi" class="bg-1">
     <div class="container">
+      <div class="ujian mt-2 mb-2 pt-2 pb-2"></div>
         <div class="row">
       <div class="col-12 col-md-4 col-xl-3">
         <ul class="m-2 px-4 py-3 sticky-top border rounded" style="top: 5rem;">
+          <li><a href="#definisi-himpunan">Apa itu himpunan?</a></li>
+          <li><a href="#cara-menyatakan-himpunan">Bagaimana menyatakan suatu himpunan?</a></li>
           <li><a href="#definisi">Apa itu relasi?</a></li>
           <li><a href="#pentingnya-relasi">Kenapa relasi penting?</a></li>
           <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu relasi?</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-8 col-xl-9 order-md-first">
-        <h1 id="definisi">
+        <h3 id="definisi-himpunan">
+          Apa itu himpunan?
+        </h3>
+        <p>
+          <strong>Himpunan</strong> adalah beberapa objek tertentu yang dapat diidentifikasi dengan jelas. Pada himpunan terdapat himpunan yang memuat seluruh anggota tertentu dan dilambangkan dengan huruf S disebut dengan <strong>himpunan semesta</strong>. Keterhubungan himpunan tersebut perlu adanya <strong>kardinalitas himpunan</strong> yang menunjukkan banyaknya anggota himpunan dalam himpunan tertentu dan dinotasikan dengan n(A).
+        </p>
+
+        <h3 id="cara-menyatakan-himpunan">
+          Bagaimana menyatakan suatu himpunan?
+        </h3>
+        <p>
+          Tahukah kamu bahwa bahan baku masakan tersebut dari beras?<br>
+          Namun, beras tersebut dapat dibuat dalam berbagai rasa, bentuk, dan tampilan. Demikian pula, himpunan dapat disajikan dalam beberapa cara tanpa mengubah makna.
+        </p>
+        <p>
+          <strong>1. Himpunan dinyatakan dengan kata-kata (deskripsi)</strong><br>
+          Himpunan dapat direpresentasikan dengan menggambarkan karakteristik yang dimiliki oleh setiap anggota himpunan.<br>
+          Himpunan A = {huruf vokal dalam alfabet}<br>
+          Himpunan B = {bilangan ganjil kurang dari 10}
+        </p>
+        <p>
+          <strong>2. Himpunan dinyatakan dengan menyebutkan anggota (enumerasi)</strong><br>
+          Perhatikan contoh di bawah ini!<br>
+          Himpunan Q = {2, 3, 5, 7, 11, 19}<br>
+          Himpunan R = {2, 4, 6, 8, 10, …, 20}<br>
+          Himpunan S = {…, -3, -2, -1, 0, 1, 2, 3, …}<br>
+          Hubungan pada <strong>himpunan Q dan R dinamakan sebagai himpunan berhingga</strong>. Sedangkan <strong>himpunan S</strong> dinamakan <strong>sebagai himpunan tak berhingga</strong>, karena bilangan terbesar anggota dari himpunan S tidak dapat ditentukan dan tidak dibatasi.
+        </p>
+        <p>
+          <strong>3. Himpunan dinyatakan dengan menggunakan notasi pembuat himpunan</strong><br>
+          Bentuk umum notasi adalah {𝑥|𝑃(𝑥)}, di mana simbol 𝑥 melambangkan anggota himpunan dan 𝑃(𝑥) menyatakan kriteria yang harus dipenuhi 𝑥 agar menjadi anggota himpunan.<br>
+          Himpunan A = {𝑦 | 𝑦 < 15, dengan y merupakan bilangan prima}<br>
+          Himpunan B = {𝑥 | 𝑥 < 10, dan 𝑥 ∈ 𝐴} <br>
+          Himpunan C = {𝑥 | 5 < 𝑥 < 10, dengan 𝑥 merupakan bilangan riil}<br>
+        </p>
+
+        <h3 id="definisi">
           Apa itu relasi?
-        </h1>
+        </h3>
         <p>
-          Dalam matematika, konsep relasi merujuk pada hubungan atau keterkaitan antara dua himpunan elemen.
+          Relasi dari himpunan A ke himpunan B adalah hubungan antara setiap anggota A dengan anggota B. Relasi A ke B merupakan himpunan bagian dari 𝐴 × 𝐵. Relasi dibedakan dengan istilah: (a)<strong> A sebagai domain</strong>, (b) <strong>B sebagai kodomain</strong>, dan (c) <strong>himpunan bagian dari B yang memiliki pasangan dengan himpunan A disebut sebagai range</strong>.
         </p>
 
-        <h1 id="pentingnya-relasi">
+        <h3 id="pentingnya-relasi">
           Kenapa relasi penting?
-        </h1>
+        </h3>
         <p>
-          Relasi berperan penting dalam berbagai cabang matematika dan ilmu lainnya, karena membantu kita memahami
-          koneksi
-          dan keterkaitan antara objek atau anggota himpunan. Relasi ini dapat dilihat sebagai cara untuk menggambarkan
-          bagaimana setiap elemen di satu himpunan berhubungan dengan elemen di himpunan lainnya.
+          Relasi berperan penting dalam berbagai cabang matematika dan ilmu lainnya, karena membantu kita memahami koneksi dan keterkaitan antara objek atau anggota himpunan. Relasi ini dapat dilihat sebagai cara untuk menggambarkan bagaimana setiap elemen di satu himpunan berhubungan dengan elemen di himpunan lainnya.
         </p>
 
-        <h1 id="cara-menyatakan">
+        <h3 id="cara-menyatakan">
           Bagaimana menyatakan suatu relasi?
-        </h1>
+        </h3>
         <p>
           Relasi antara dua himpunan dapat dinyatakan dengan tiga cara, yaitu dengan <strong>diagram panah</strong>,
           <strong>himpunan
@@ -92,15 +128,10 @@
         </p>
         <p>
           <strong>Perhatikan contoh di bawah ini!</strong>
-          Hasil pengambilan data mengenai pelajaran yang disukai oleh lima siswa kelas VIII diperoleh seperti pada
-          tabel.
-          Permasalahan yang terdapat pada tabel dapat dinyatakan menggunakan diagram panah, diagram Kartesius, dan
-          himpunan
-          pasangan berurutan, sebagaimana ditunjukkan di bawah ini. <br>
-        </p>
-        <p>
+          TABEL GESSS
+          Hasil data mengenai pelajaran yang disukai oleh lima siswa kelas VIII telah diperoleh sesuai dengan tabel berikut.<br>
           Misalkan <br>
-          A = {Abdul, Budi, Candra, Dini, Elok}, <br>
+          A = {Alex, Brian, Chris, Dean, Eric}, <br>
           B = {Matematika, IPA, IPS, Bahasa Inggris, Kesenian, Keterampilan, Olahraga} <br>
           “pelajaran yang disukai” adalah relasi yang menghubungkan himpunan A ke himpunan B. <br>
         </p>
@@ -124,12 +155,10 @@
           <strong>Cara 3: Himpunan Pasangan Berurutan </strong><br>
           Apabila data pada tabel dinyatakan dengan pasangan berurutan, maka dapat ditulis sebagai berikut.
           Himpunan pasangan berurutan dari himpunan A ke himpunan B adalah
-          {(Abdul, Matematika), (Abdul, IPA), (Budi, IPA), (Budi, IPS), (Budi, Kesenian), (Candra, Keterampilan),
-          (Candra,
-          Olahraga), (Dini, Bahasa Inggris), (Dini, Kesenian), (Elok, Matematika), (Elok, IPA), (Elok, Keterampilan)}.
+          {(Alex, Matematika), (Alex, IPA), (Brian, IPA), (Brian, IPS), (Brian, Kesenian), (Chris,Keterampilan), (Chris, Olahraga), (Dean, Bahasa Inggris), (Dean, Kesenian), (Eric,Matematika), (Eric, IPA), (Eric, Keterampilan)}.
         </p>
         <p>
-          Uraian di atas menunjukkan <strong>macam-macam cara</strong> yang bisa digunakan untuk menyatakan relasi dari
+          Uraian di atas menunjukkan <strong>macam-macam cara</strong> yang bisa digunakan untuk <strong>menyatakan relasi</strong> dari
           <strong>himpunan A
             ke
             himpunan B.</strong>
@@ -140,19 +169,21 @@
     <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="{ answer: null, showAnswer: false }">
       <legend class="float-none w-auto fs-6 text-body-secondary">Quiz!</legend>
       <p>
-        Sebuah tempat wisata memasang tarif masuk Rp10.000 setiap orang dan ditambah tarif parkir Rp5.000 untuk
-        setiap
-        kendaraan roda empat. Jika Chris datang ke tempat wisata tersebut bersama 3 rekannya menggunakan mobil,
-        biaya
-        yang
-        harus ia bayar adalah...
+        Dikelas 8 SMP belajar matematika terdapat 4 orang siswa yang lebih menyukai pelajaran tertentu.<br>
+        • Buyung menyukai pelajaran IPS dan Kesenian<br>
+        • Doni menyukai pelajaran ketrampilan dan olah raga<br>
+        • Vita menyukai pelajaran IPA, dan<br>
+        • Putri lebih menyukai pelajaran matematika dan bahasa inggris<br>
+        Berikut yang merupakan relasi dari pernyataan di atas adalah ....
       </p>
       <input type="radio" x-model="answer" id="answer-a" value="a">
-      <label for="answer-a">Rp 35.000</label><br>
+      <label for="answer-a">gambar a</label><br>
       <input type="radio" x-model="answer" id="answer-b" value="b">
-      <label for="answer-b">Rp 40.000</label><br>
+      <label for="answer-b">gambar b</label><br>
       <input type="radio" x-model="answer" id="answer-c" value="c">
-      <label for="answer-c">Rp 45.000</label><br>
+      <label for="answer-c">gambar c</label><br>
+      <input type="radio" x-model="answer" id="answer-b" value="b">
+      <label for="answer-b">gambar d</label>
 
       <template x-if="!showAnswer">
         <button class="btn btn-primary mt-4" @click="showAnswer = true">Submit</button>
