--- a/petabelajar.html
+++ b/petabelajar.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materi</title>
+  <title>Peta Belajar</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -48,52 +48,14 @@
     </div>
   </nav>
 
-  <div id="materi" class="bg-1">
-    <div class="container">
-      <div class="ujian mt-2 mb-2 pt-2 pb-2"></div>
-        <h3 class="text-center">Materi Pembelajaran</h3>
-        <p class="text-center">Pilih materi pembelajaran yang kamu inginkan!</p>
-        
-        <div class="row text-center">
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Peta Belajar" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Peta Belajar</strong></h3>
-                        <a href="petabelajar.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                  <img src="img/relasi.png" alt="Relasi" class="card-img-top" width="400" height="300">
-                  <div class="card-body">
-                      <h5 class="card-title"><strong>Relasi</strong></h3>
-                      <a href="materirelasi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                  </div>
-              </div>
-          </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Fungsi" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Fungsi</strong></h3>
-                        <a href="materifungsi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Korespondensi Satu-satu" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Korespondensi Satu-satu</strong></h3>
-                        <a href="materikorespondensisatu-satu.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+  
+  <div class="container">
+    <div class="ujian mt-3 mb-3 pt-3 pb-3">
+      <div class="container" id="ff-compose"></div>
+        <h3 class="text-center">Peta Belajar</h3>
+        <p class="text-center"> Ini adalah Peta Belajar Matematika!</p>
     </div>
-</div>
+  </div>
 
   <footer>
     <div class="footer container-fluid position-relative bg-light-radial text-white-50 bg-dark mt-5">
