--- a/materikorespondensisatu-satu.html
+++ b/materikorespondensisatu-satu.html
@@ -50,54 +50,72 @@
 
   <div id="korespondensi" class="bg-1">
     <div class="container">
+      <div class="ujian mt-2 mb-2 pt-2 pb-2"></div>
         <div class="row">
       <div class="col-12 col-md-4 col-xl-3">
         <ul class="m-2 px-4 py-3 sticky-top border rounded" style="top: 5rem;">
           <li><a href="#definisi">Apa itu korespondensi satu-satu</a></li>
           <li><a href="#cara-menyatakan">Bagaimana menyatakan suatu korespondensi satu-satu</a></li>
+          <li><a href="#banyak">Berapa banyak korespondensi satu-satu</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-8 col-xl-9 order-md-first">
-        <h1 id="definisi">
+        <h3 id="definisi">
           Apa itu korespondensi satu-satu?
-        </h1>
+        </h3>
         <p>
-          Perhatikan deretan rumah di suatu daerah. Setiap rumah memiliki nomor rumah tertentu yang berbeda dengan nomor
-          rumah di daerah tersebut. Mungkinkah satu rumah memiliki dua nomor rumah? Atau mungkinkah dua rumah memiliki
-          nomor
-          rumah yang sama? Tentu saja jawabannya tidak. Hubungan antara rumah dan nomor rumah merupakan suatu fungsi
-          yang
-          disebut <strong>korespondensi satu-satu.</strong>
+          <strong>Fungsi satu-satu</strong> adalah fungsi khusus yang memasangkan tepat satu untuk setiap anggota daerah asal maupun daerah kawan. Dengan kata lain, dapat dikatakan bahwa setiap anggota dari daerah asal maupun dari daerah kawan hanya mempunyai satu pasang. Fungsi satu-satu ini bisa disebut dengan <strong>korespondensi satu-satu</strong>
         </p>
-        <h1 id="cara-menyatakan">
+        <h3 id="cara-menyatakan">
           Bagaimana menyatakan suatu korespondensi satu-satu?
-        </h1>
+        </h3>
         <p>
-          Diketahui himpunan A = {1, 2, 3,} dan himpunan B = {a, b, c}. Relasi dari himpunan A ke himpunan B yang
-          merupakan korespondensi satu-satu dapat dijabarkan sebagai berikut.
+          Misalkan:<br>
+          Ada lima siswa telah memiliki nomor induk sekolah di SMP Semangat 45, kelima siswa tersebut tentunya memiliki nomor induk khusus buat nomor induk masing-masing yang tidak akan dimiliki oleh siswa lain, yakni seperti berikut.<br>
+          Nomor induk Ahmad adalah 219,<br>
+          Nomor induk As’ari adalah 279,<br>
+          Nomor induk Tohir adalah 292,<br>
+          Nomor induk Tauiq adalah 258,<br>
+          Nomor induk Wati adalah 224,<br>
+          Apabila A dinyatakan mewakili himpunan siswa, maka anggota himpunan A adalah {Ahmad, 
+          As’ari, Tohir, Tauiq, Wati} dan anggota-anggota himpunan B adalah {219, 224, 258, 279, 292}
+          sehingga “nomor induk” merupakan relasi yang mungkin dari himpunan A ke himpunan B, dan
+          "nama pemilik nomor induk" merupakan relasi yang mugkin dari himpunan B ke himpunan A.<br>
+          <strong>GAMBARRR</strong>
         </p>
         <p>
-          Berdasarkan uraian pada tabel, banyaknya korespondensi satu-satu yang mungkin dari himpunan A ke himpunan
-          B adalah sebanyak 6.
+          Berdasarkan gambar bagian kiri menunjukkan bahwa setiap elemen A memiliki satu pasangan
+          dengan setiap anggota B. Sehingga, <strong>"nomor induk" merupakan relasi dari himpunan A ke B</strong> 
+          yang dapat <strong>disebut</strong> juga <strong>sebagai fungsi (pemetaan)</strong>. <strong>Semua elemen himpunan B</strong> dapat
+          <strong>disebut</strong> sebagai <strong>pemetaan (bayangan)</strong> dari <strong>elemen himpunan A</strong> dan dipasangkan dengan
+          tepat satu oleh anggota himpunan A. Sedangkan yang terjadi pada gambar bagian kana
+          merupakan kebalikannya. <strong>Pemetaan dua arah</strong> seperti yang ditunjukkan pada gambar diatas
+          dapat juga <strong>disebut</strong> sebagai <strong>fungsi satu-satu(korespondensi satu-satu)</strong>.
+        </p>
+        <h3 id="banyak">
+          Berapa banyak korespondensi satu-satu?
+        </h3>
+        <p>
+          Apabila diketahui anggota himpunan A adalah {1, 2, 3} dan anggota himpunan B adalah {a, b, c}. 
+          Relasi dari himpunan A ke B yang mungkin dapat dibentuk sebagai korespondensi satusatu
+          dapat diilustrasikan pada tabel berikut.<br>
+          <strong>DIAGRAMMM</strong>
         </p>
       </div>
     </div>
     <fieldset id="question" class="border rounded p-4 pt-0 my-4" x-data="{ answer: null, showAnswer: false }">
       <legend class="float-none w-auto fs-6 text-body-secondary">Quiz!</legend>
       <p>
-        Sebuah tempat wisata memasang tarif masuk Rp10.000 setiap orang dan ditambah tarif parkir Rp5.000 untuk
-        setiap
-        kendaraan roda empat. Jika Chris datang ke tempat wisata tersebut bersama 3 rekannya menggunakan mobil,
-        biaya
-        yang
-        harus ia bayar adalah...
+        Diketahui A = himpunan huruf pembentuk kata CERIA dan B = himpunan huruf vokal. Berapakah banyak korespondensi satu-satu yang dapat dibentuk dari himpunan A dan himpunan B?
       </p>
       <input type="radio" x-model="answer" id="answer-a" value="a">
-      <label for="answer-a">Rp 35.000</label><br>
+      <label for="answer-a">25</label><br>
       <input type="radio" x-model="answer" id="answer-b" value="b">
-      <label for="answer-b">Rp 40.000</label><br>
+      <label for="answer-b">32</label><br>
+      <input type="radio" x-model="answer" id="answer-b" value="b">
+      <label for="answer-b">5</label><br>
       <input type="radio" x-model="answer" id="answer-c" value="c">
-      <label for="answer-c">Rp 45.000</label><br>
+      <label for="answer-c">120</label><br>
 
       <template x-if="!showAnswer">
         <button class="btn btn-primary mt-4" @click="showAnswer = true">Submit</button>
