--- a/contact-us.html
+++ b/contact-us.html
@@ -22,8 +22,9 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light shadow fixed-top">
     <div class="container d-flex bd-highlight">
-      <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="assets/theme/Jenusa.png" alt="...">
-      </a>
+      <a class="navbar-brand" href="./index.html">
+        <img class="img-fluid" src="assets/images/logo-transparan.png" alt="Logo" style="width: 40px; height: 40px;">
+      </a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
