--- a/materioutside.html
+++ b/materioutside.html
@@ -16,14 +16,14 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <script src="https://srv.buysellads.com/ads/CESI627W.json?callback=customJSONPCallback"></script>
   <script src="https://kit.fontawesome.com/0e035b9984.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light shadow fixed-top">
     <div class="container d-flex bd-highlight">
-      <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="assets/theme/Jenusa.png" alt="...">
-      </a>
+      <a class="navbar-brand" href="./index.html">
+        <img class="img-fluid" src="assets/images/logo-transparan.png" alt="Logo" style="width: 40px; height: 40px;">
+      </a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
@@ -50,47 +50,47 @@
 
   <div id="materi" class="bg-1">
     <div class="container">
-      <div class="ujian mt-2 mb-2 pt-2 pb-2"></div>
+      <div class="materi mt-2 mb-2 pt-2 pb-2"></div>
         <h3 class="text-center">Materi Pembelajaran</h3>
         <p class="text-center">Pilih materi pembelajaran yang kamu inginkan!</p>
-        
+
         <div class="row text-center">
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Peta Belajar" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Peta Belajar</strong></h3>
-                        <a href="petabelajar.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                  <img src="img/relasi.png" alt="Relasi" class="card-img-top" width="400" height="300">
-                  <div class="card-body">
-                      <h5 class="card-title"><strong>Relasi</strong></h3>
-                      <a href="materirelasi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                  </div>
+          <div class="col-sm-6">
+            <div class="card mb-3" style="width: 18rem;">
+              <img src="./assets/images/sign.png" class="card-img-top" alt="Konsep">
+              <div class="card-body">
+                <p class="card-title"><strong>Peta Belajar</strong></p>
+                <a href="petabelajar.html"><button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button></a>
               </div>
+            </div>
           </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Fungsi" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Fungsi</strong></h3>
-                        <a href="materifungsi.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
+          <div class="col-sm-6">
+            <div class="card mb-3" style="width: 18rem;">
+              <img src="./assets/images/sign.png" class="card-img-top" alt="Relasi">
+              <div class="card-body">
+                <p class="card-title"><strong>Relasi</strong></p>
+                <a href="materirelasi.html"><button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button></a>
+              </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <img src="img/relasi.png" alt="Korespondensi Satu-satu" class="card-img-top" width="400" height="300">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Korespondensi Satu-satu</strong></h3>
-                        <a href="materikorespondensisatu-satu.html"><button class="btn" data-bs-toggle="modal" data-bs-target="#myModal">Lihat</button></a>
-                    </div>
-                </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card mb-3" style="width: 18rem;">
+              <img src="./assets/images/sign.png" class="card-img-top" alt="fungsi">
+              <div class="card-body">
+                <p class="card-title"><strong>Fungsi</strong></p>
+                <a href="materifungsi.html"><button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button></a>
+              </div>
             </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card mb-3" style="width: 18rem;">
+              <img src="./assets/images/sign.png" class="card-img-top" alt="korespondensi">
+              <div class="card-body">
+                <p class="card-title"><strong>Korespondensi Satu-satu</strong></p>
+                <a href="materikorespondensisatu-satu.html"><button class="btn" data-toggle="modal" data-target="#myModal">Lihat</button></a>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
 </div>
