--- a/materirelasi.html
+++ b/materirelasi.html
@@ -28,8 +28,9 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light shadow fixed-top">
     <div class="container d-flex bd-highlight">
-      <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="assets/theme/Jenusa.png" alt="...">
-      </a>
+      <a class="navbar-brand" href="./index.html">
+        <img class="img-fluid" src="assets/images/logo-transparan.png" alt="Logo" style="width: 40px; height: 40px;">
+      </a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
@@ -128,7 +129,30 @@
         </p>
         <p>
           <strong>Perhatikan contoh di bawah ini!</strong>
-          TABEL GESSS
+          <table class="table table-bordered">
+            <tbody>
+              <tr>
+                <td>Alex</td>
+                <td>Matematika, IPA</td>
+              </tr>
+              <tr>
+                <td>Brian</td>
+                <td>IPA, IPS, Kesenian</td>
+              </tr>
+              <tr>
+                <td>Chris</td>
+                <td>Olahraga, Ketrampilan</td>
+              </tr>
+              <tr>
+                <td>Dean</td>
+                <td>Kesenian, Bahasa Inggris</td>
+              </tr>
+              <tr>
+                <td>Eric</td>
+                <td>Matematika, IPA, Ketrampilan</td>
+              </tr>
+            </tbody>
+          </table>
           Hasil data mengenai pelajaran yang disukai oleh lima siswa kelas VIII telah diperoleh sesuai dengan tabel berikut.<br>
           Misalkan <br>
           A = {Alex, Brian, Chris, Dean, Eric}, <br>
