--- a/materifungsi.html
+++ b/materifungsi.html
@@ -22,8 +22,9 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light shadow fixed-top">
     <div class="container d-flex bd-highlight">
-      <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="assets/theme/Jenusa.png" alt="...">
-      </a>
+      <a class="navbar-brand" href="./index.html">
+        <img class="img-fluid" src="assets/images/logo-transparan.png" alt="Logo" style="width: 40px; height: 40px;">
+      </a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
@@ -158,7 +159,26 @@
         <p>
           <strong>Cara 4: Tabel</strong><br>
           Apabila "setengah kali dari" adalah relasi yang ditentukan, maka tabel berikut ini merupakan cara yang dapat digunakan untuk hubungan tersebut.<br>
-          <strong>TABELLL!!!</strong>
+          <table class="table table-bordered">
+            <tbody>
+              <tr>
+                <td>x</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <td>f(x)</td>
+                <td>2</td>
+                <td>4</td>
+                <td>6</td>
+                <td>8</td>
+                <td>10</td>
+              </tr>
+            </tbody>
+          </table>
         </p>
         <p>
           <strong>Cara 5: Grafik</strong><br>
