--- a/materioutside.html
+++ b/materioutside.html
@@ -26,7 +26,7 @@
       </a> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -44,7 +44,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
@@ -55,8 +55,8 @@
         <p class="text-center">Pilih materi pembelajaran yang kamu inginkan!</p>
 
         <div class="row text-center">
-          <div class="col-sm-6">
-            <div class="card mb-3" style="width: 18rem;">
+          <div class="col-sm-4 centered-row mb-adjusted mx-adjusted">
+            <div class="card mb-3 custom-block bg-white shadow-lg padding-adjusted" style="width: 10rem;">
               <img src="./assets/images/sign.png" class="card-img-top" alt="Konsep">
               <div class="card-body">
                 <p class="card-title"><strong>Peta Belajar</strong></p>
@@ -64,8 +64,8 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card mb-3" style="width: 18rem;">
+          <div class="col-sm-4 centered-row mb-adjusted mx-adjusted">
+            <div class="card mb-3 custom-block bg-white shadow-lg padding-adjusted" style="width: 10rem;">
               <img src="./assets/images/sign.png" class="card-img-top" alt="Relasi">
               <div class="card-body">
                 <p class="card-title"><strong>Relasi</strong></p>
@@ -73,8 +73,8 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card mb-3" style="width: 18rem;">
+          <div class="col-sm-4 centered-row mb-adjusted mx-adjusted">
+            <div class="card mb-3 custom-block bg-white shadow-lg padding-adjusted" style="width: 10rem;">
               <img src="./assets/images/sign.png" class="card-img-top" alt="fungsi">
               <div class="card-body">
                 <p class="card-title"><strong>Fungsi</strong></p>
@@ -82,8 +82,8 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6">
-            <div class="card mb-3" style="width: 18rem;">
+          <div class="col-sm-4 centered-row mb-adjusted mx-adjusted">
+            <div class="card mb-3 custom-block bg-white shadow-lg padding-adjusted" style="width: 10rem;">
               <img src="./assets/images/sign.png" class="card-img-top" alt="korespondensi">
               <div class="card-body">
                 <p class="card-title"><strong>Korespondensi Satu-satu</strong></p>
@@ -135,7 +135,9 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
   <script src="./assets/js/script.js"></script>
   <script src="js/sweetalert2.all.min.js"></script>
-
+  <script src="./assets/js/costum.js"></script>
+  <script src="./assets/js/click-scroll.js"></script>
+  <script src="./assets/js/jquery.sticky.js"></script>
 </body>
 
 </html>
