--- a/petabelajar.html
+++ b/petabelajar.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
