--- a/userprofile.html
+++ b/userprofile.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
@@ -55,7 +55,7 @@
         <div class="card d-flex align-items-center shadow px-3 py-3 mt-5 mb-5" style="min-width: 50% !important; ">
           <h3 class="mt-5 mb-5 text-center" style="letter-spacing: 1px; color: #00A885;">Profile
           </h3>
-          <div class="user-img"><img src="./assets/images/sign.png" alt="..." class="img-responsive rounded"
+          <div class="user-img"><img src="./assets/images/profile_placeholder.png" alt="..." class="img-responsive rounded"
               style="width: 150px; height: 150px;"></div>
           <p class="fw-bold text-center mt-5">Chayun Fadila</p>
           <p class="text-muted text-center mb-5">ChayunFadila@gemail.kom</p>
