--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="#" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
