--- a/materifungsi.html
+++ b/materifungsi.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  active" href="materioutside.html">Materi</a>
+            <a class="nav-link active" href="materioutside.html">Materi</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ujian.html">Ujian</a>
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
@@ -272,9 +272,9 @@
 
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
-  <script src="./assets/js/script.js"></script>
   <script src="js/sweetalert2.all.min.js"></script>
-
+  <script src="./assets/js/costum.js"></script>
+  <script src="./assets/js/click-scroll.js"></script>
 </body>
 
 </html>
