--- a/materirelasi.html
+++ b/materirelasi.html
@@ -22,7 +22,6 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -51,7 +50,7 @@
           </li>
         </ul>
       </div>
-      <div class="nav-profile justify-content-end"><a href="userprofile.html"><img src="assets/theme/Jenusa.png" alt="..."></a></div>
+      <div class="nav-profile ml-auto"><a href="userprofile.html"><img src="assets/images/profile_placeholder.png" alt="..."></a></div>
     </div>
   </nav>
 
